--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -16,6 +16,9 @@ body {
 main {
     min-width: 100%;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .clock {
@@ -24,4 +27,74 @@ main {
     background-color: rgba(255, 255, 255, 0.534);
     border-radius: 600px;
     border: 15px solid black;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.number {
+    font-size: 2rem;
+    font-weight: 700;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 10px;
+    
+}
+
+.number-1 {
+    transform: rotate(30deg);
+}
+
+.number-2 {
+    transform: rotate(60deg);
+}
+
+.number-3 {
+    transform: rotate(90deg);
+}
+
+.number-4 {
+    transform: rotate(120deg);
+}
+
+.number-5 {
+    transform: rotate(150deg);
+}
+.number-6 {
+    transform: rotate(180deg);
+}
+.number-7 {
+    transform: rotate(210deg);
+}
+.number-8 {
+    transform: rotate(240deg);
+}
+.number-9 {
+    transform: rotate(270deg);
+}
+.number-10 {
+    transform: rotate(300deg);
+}
+
+.number-11 {
+    transform: rotate(330deg);
+}
+
+.number-12 {
+    transform: rotate(360deg);
+}
+
+
+.second-hand {
+    box-shadow: 3px 0px 10px 0px #00000079;
+    width: 6px;
+    height: 240px;
+    background-color: yellow;
+    position: absolute;
+    border-radius: 5px;
+    transform: translate(0, -45%);
+    transform: rotate();
 }
