--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -85,16 +85,49 @@ main {
 
 .number-12 {
     transform: rotate(360deg);
+    
 }
 
 
 .second-hand {
     box-shadow: 3px 0px 10px 0px #00000079;
-    width: 6px;
-    height: 240px;
-    background-color: yellow;
+    width: 5px;
+    height: 230px;
+    background-color: #ffcc00;
     position: absolute;
     border-radius: 5px;
-    transform: translate(0, -45%);
-    transform: rotate();
+    transform: translate(0, -50%);
+    transform-origin: bottom center;
+}
+
+.minute-hand {
+    box-shadow: 3px 0px 10px 0px #00000079;
+    width: 8px;
+    height: 200px;
+    background-color: #2d2502;
+    position: absolute;
+    border-radius: 5px;
+    transform: translate(0, -50%);
+    transform-origin: bottom center;
+}
+
+.hour-hand {
+    box-shadow: 3px 0px 10px 0px #00000079;
+    width: 13px;
+    height: 170px;
+    background-color: #2d2502;
+    position: absolute;
+    border-radius: 13px;
+    transform: translate(0, -50%);
+    transform-origin: bottom center;
+}
+
+.center {
+    box-shadow: 3px 0px 10px 0px #00000079;
+
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background-color: #ffcc00;
+    position: absolute;
 }
