--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -41,6 +41,8 @@ main {
     justify-content: center;
 }
 
+
+
 .number {
     font-size: 2rem;
     font-weight: 700;
@@ -102,7 +104,7 @@ main {
     box-shadow: 3px 0px 10px 0px #00000079;
     width: 5px;
     height: 230px;
-    background-color: #ffcc00;
+    background-color: #ff0000;
     position: absolute;
     border-radius: 5px;
     transform: translate(0, -50%);
@@ -113,7 +115,7 @@ main {
     box-shadow: 3px 0px 10px 0px #00000079;
     width: 8px;
     height: 200px;
-    background-color: #2d2502;
+    background-color: #000000;
     position: absolute;
     border-radius: 5px;
     transform: translate(0, -50%);
@@ -124,7 +126,7 @@ main {
     box-shadow: 3px 0px 10px 0px #00000079;
     width: 13px;
     height: 170px;
-    background-color: #2d2502;
+    background-color: #000000;
     position: absolute;
     border-radius: 13px;
     transform: translate(0, -50%);
@@ -137,6 +139,6 @@ main {
     width: 20px;
     height: 20px;
     border-radius: 20px;
-    background-color: #ffcc00;
+    background-color: #ff0000;
     position: absolute;
 }
